--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,13 @@
-Inicio
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home page do projeto de TI</title>
+</head>
+<body>
+
+    <h1>Blog Informativo</h1>
+    
+</body>
+</html>
