Continuo a testar, mas acho que já está tudo pronto... Lol.

--- a/Index.html
+++ b/Index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home page do projeto de TI</title>
+    <title>Blog sobre cenas</title>
 </head>
 <body>
 
     <h1>Blog Informativo</h1>
+    <h2>Feito for Afonso Monteiro <br> e Bruno Evangelista!</h2>
     
 </body>
 </html>
